2009-03-02  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-util.c: Read out memory properly from GString.
	Fixes bug #551753
	
	* ssh/seahorse-ssh-key-data.c: Add some null checks. 
	
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-keyserver-sync.c: Allow multiple sync windows to open. 
	
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager.c: Fire selection changed after tab 
	switch actually happens. Fixes bug #553670
	
2009-03-02  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-keyserver-search.c: Add null check. Fixes bug #502029

2009-03-02  Stef Walter  <stef@memberwebs.com>

	* egg/egg-secure-entry.c: Fix "gnome-keyring-ask needs to disable 
	input method in password" bug #561331 Patch by Takao Fujiwara

=== seahorse 2.25.92 ===

2009-03-02  Stef Walter  <stef@memberwebs.com>

	* NEWS:
	* README: Release version 2.25.92

2009-03-01  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-servers.c: Fix crash when typing in custom
	key server URL. Fixes bug #573602
	
2009-03-01  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-keyserver-results.c: Match key identifiers where 
	the server returned a short one, but we're searching for a longer
	key identifier. See bug #568799
	
2009-02-28  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-keyserver-results.c: Make results of 
	a keyserver searched by keyid display properly. Fixes bug #568799
	
2009-02-28  Stef Walter  <stef@memberwebs.com>

	* libseahorse/seahorse-object.c:
	* pgp/seahorse-gpgme-key.c: Always have an ID on a GPGME key before
	trying to load other parts.

	* pgp/seahorse-gpgme-key.c: Don't crash when loading a key that 
	initialy only has a secret part.

2009-02-27  Stef Walter  <stef@memberwebs.com>

	* src/seahorse-key-manager-store.c: Don't allow interactive
	search in the key tree since, the filter on the top serves 
	that purpose.
	
2009-02-27  Stef Walter  <stef@memberwebs.com>

	* pgp/seahorse-gpgme-uid.c: