@@ -1,3 +1,8 @@
+2009-03-04  Stef Walter  <stef@memberwebs.com>
+
+	* src/seahorse-key-manager.c: Update GUI before showing window, to avoid
+	GUI changes when selection is initialized. Fix bug #574079
+	 
 2009-03-02  Stef Walter  <stef@memberwebs.com>
 
 	* libseahorse/seahorse-util.c: Read out memory properly from GString.
